feature/wise-109 - Adjusted some files